# robograsp

./: .gitignore  README.md
dqn_log/: grasp_success_rate.txt  reward_list.txt
freenect2/lib/: libfreenect2.so.0.2.0
freenect2/lib/cmake/freenect2/: freenect2Config.cmake
freenect2/lib/pkgconfig/: freenect2.pc
panda_control/scripts/: panda_mid_demo.py
panda_description/: CMakeLists.txt  package.xml
panda_description/urdf/: box.xacro  panda.urdf  panda.urdf.xacro
panda_gazebo/: package.xml
panda_gazebo/launch/: panda.launch  panda_demo.launch  panda_move_group.launch  panda_planning_context.launch
panda_moveit_config/: .setup_assistant  package.xml
panda_moveit_config/config/: controllers.yaml  ompl_planning.yaml  ros_controllers.yaml  world.srdf
panda_moveit_config/launch/: move_group.launch  planning_context.launch  ros_controllers.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml
panda_sim_description/: CMakeLists.txt  ikfast61_panda_arm_hand.cpp  package.xml
panda_sim_description/urdf/: bottle1.urdf.xacro  bottle2.urdf.xacro  common.gazebo.xacro  hand.xacro  kinect_gazebo.urdf.xacro  kinect_properties.urdf.xacro  panda.transmission.xacro  panda_arm.xacro  panda_arm_hand.urdf  panda_sim_description.urdf.xacro  panda_sim_description_lfd.urdf.xacro  panda_sim_description_no_table.urdf.xacro  simple_box.urdf.xacro  table.xacro
panda_sim_description/urdf/sensors/: kinect.urdf.xacro
panda_sim_gazebo/: CMakeLists.txt  package.xml  setup.py
panda_sim_gazebo/controller/: franka_control.yaml  franka_control.yaml.bak  gazebo_controller.yaml  gripper_node_config.yaml
panda_sim_gazebo/launch/: panda_sim_controllers.launch  panda_sim_gazebo.launch  panda_sim_gazebo_world.launch  state_publishers.launch
panda_sim_gazebo/models/bunny/: model.sdf
panda_sim_gazebo/objects/: basic_cube.urdf  basic_cylinder.urdf  basic_sphere.urdf
panda_sim_gazebo/worlds/: empty.world
panda_sim_learning/: CMakeLists.txt  package.xml
panda_sim_learning/launch/: world.launch
panda_sim_learning/src/: dqn.py  learn.py  pick.py  random_run.py  robot_env.py
panda_sim_learning/src/panda_manipulation/: MyObject.py  arm.py  arm_trajectory_node.py  go_to.py  gripper_trajectory_node.py  hand.py  manipulator.py  mid_frame_broadcaster.py  min_jerk.py  obj_frame_broadcaster.py  panda_shell.py  rotations.py  solver.cpp  trajectory_generator.py  transformer.py
panda_sim_learning/src/panda_manipulation/ignore_for_now/: config1_waypoints.py  config2_waypoints.py  config3_waypoints.py  (+1 more)
panda_sim_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
panda_sim_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_names.yaml  kinematics.yaml  panda.srdf  ros_controllers.yaml  stomp_planning.yaml
panda_sim_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  panda_moveit_controller_manager.launch.xml  panda_moveit_planning_execution.launch  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  stomp_planning_pipeline.launch.xml  trajectory_execution.launch.xml  warehouse.launch
panda_sim_rl/launch/: touchObject.launch
panda_sim_rl/src/panda_sim_rl/: ddpg.py
pc_segmentation/: CMakeLists.txt  Makefile  package.xml
pc_segmentation/include/: common.hpp  misc_structures.hpp  pc_segmentation.hpp  utils.hpp  utils_pcl_ros.hpp
pc_segmentation/msg/: PcBoundingBox.msg  PcObjects.msg  PcSegmented.msg
pc_segmentation/src/: def_loop.cpp  offlineProcV2.cpp  pc_segmentation.cpp  utils.cpp  utils_pcl_ros.cpp
pc_segmentation/swig/: CMakeLists.txt
